--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
     script-src 'self' 'unsafe-inline';
-    connect-src 'self' https://api.openweathermap.org;
+    connect-src 'self' https://api.openweathermap.org https://maps.googleapis.com;
     img-src 'self' https://openweathermap.org data:;
-    style-src 'self' 'unsafe-inline';">
+    style-src 'self' 'unsafe-inline';
+">
     <link id="theme-style" rel="stylesheet" href="style.css">
 
     <title>Relógios TV ACO</title>
