--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     /********** ETA via Cloudflare Worker **********/
     async function updateETA() {
         try {
-            const googleAPIKey = urlParams.get('googleAPIKey');
+            const googleAPIKey = urlParams.get('apiKeyGoogle');
             const res = await fetch("https://muddy-sky-8ac4.igorsantos0409.workers.dev/?key="+googleAPIKey);
             const data = await res.json();
 
