--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             const data = await res.json();
 
             if (data.eta) {
-                document.getElementById("eta").textContent = `ETA: ${data.eta_com_transito}`;
+                document.getElementById("eta").textContent = `ETA: ${data}`;
             } else {
                 document.getElementById("eta").textContent = "ETA: indisponível";
             }
